@@ -11,4 +11,4 @@
 if {![package vsatisfies [package provide Tcl] 8]} {return}
 package ifneeded log 1.1.1 [list source [file join $dir log.tcl]]
 if {![package vsatisfies [package provide Tcl] 8.2]} {return}
-package ifneeded logger 0.4 [list source [file join $dir logger.tcl]]
+package ifneeded logger 0.5 [list source [file join $dir logger.tcl]]
